@@ -1,3 +1,7 @@
+2024-07-27  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp-test42-utf8): Don't test "Tifinagh".
+
 2024-07-24  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-archive-tests.el (ert-resource-directory-format)
